Dark Mode Classes corrected

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,12 +14,19 @@ $primary: $orange;
 $secondary: $red;
 $tertiary: $yellow;
 
+
+// Dark Mode
+
 @media (prefers-color-scheme: light) {
-    body {
+    body:not(.dark-theme)  {
         --primary-color: #FB8E2C;
         --text-color: #383D40;
         --bg-color: #F3F3F3;
         --component-bg-color: white;
+        
+        .light-hide {
+            display: none;
+        }
     }
 
     body.dark-theme {
@@ -32,17 +39,17 @@ $tertiary: $yellow;
             display: none;
         }
     }
-
-    .light-hide {
-        display: none;
-    }
 }
 @media (prefers-color-scheme: dark) {
-    body {
+    body:not(.light-theme)  {
         --primary-color: #FB8E2C;
         --text-color: white;
         --bg-color: black;
         --component-bg-color: #26252B;
+        
+        .dark-hide {
+            display: none;
+        }
     }
 
     body.light-theme {
@@ -54,9 +61,5 @@ $tertiary: $yellow;
         .light-hide {
             display: none;
         }
-    }
-
-    .dark-hide {
-        display: none;
     }
 }
